--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,9 @@
     "action" : {
         "default_popup" : "index.html",
         "default_icon" : "fav_icon.png"
-    }
+    },
+    "permissions" : ["tabs", "activeTab", "scripting"],
+    "host_permissions" : [
+        "https://console.zerodha.com/portfolio/holdings/discrepancy/*"
+    ]
 }
