--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "version" : "1.0",
     "action" : {
         "default_popup" : "index.html",
-        "default_icon" : "fav_icon.png"
+        "default_icon" : "icons/fav_icon.png"
     },
     "permissions" : ["tabs", "activeTab", "scripting"],
     "host_permissions" : [
