--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
         "default_popup" : "index.html",
         "default_icon" : "icons/fav_icon.png"
     },
-    "permissions" : ["tabs", "activeTab", "scripting"],
+    "permissions" : ["tabs", "activeTab", "scripting", "notifications"],
     "host_permissions" : [
         "https://console.zerodha.com/portfolio/holdings/discrepancy/*"
     ]
