--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,6 +7,12 @@
         "default_popup" : "index.html",
         "default_icon" : "icons/fav_icon.png"
     },
+    "icons" :{
+        "16" : "icons/fav_icon.png",
+        "32" : "icons/fav_icon.png",
+        "48" : "icons/fav_icon.png",
+        "128" : "icons/fav_icon.png"
+    },
     "permissions" : ["tabs", "activeTab", "scripting", "notifications"],
     "host_permissions" : [
         "https://console.zerodha.com/portfolio/holdings/discrepancy/*"
